# Nucleus

./: Cargo.toml  justfile  todo.md
logging/: Cargo.toml
logging/src/: lib.rs
nuclcommands/: Cargo.toml
nuclcommands/src/: lib.rs
nuclconsts/: Cargo.toml
nuclconsts/src/: lib.rs  paths.rs  units.rs  units_parsing.rs
nuclctl/: Cargo.toml
nuclctl/src/: main.rs
nucld/: Cargo.toml
nucld/src/: autostart.rs  errors.rs  exec.rs  initialization.rs  lib.rs  log.rs  main.rs  parse_input.rs  prelude.rs  presetups.rs  signals.rs  todo.md  units.rs
nuclerrors/: Cargo.toml
nuclerrors/src/: lib.rs
nucllib/: Cargo.toml
nucllib/src/: commands.rs  errors.rs  ipc.rs  lib.rs  logging.rs  macros.rs  units.rs
nuclstart/: Cargo.toml
nuclstart/src/: main.rs
