[package]
name = "logging"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
dirs = "6.0.0"
nuclconsts = { version = "0.1.0", path = "../nuclconsts" }
nucllib = { version = "0.1.0", path = "../nucllib" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = { version = "0.20.0", features = ["derive"] }
tempfile = "3.27.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.23"
