[package]
name = "nuclconsts"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
nix = { version = "0.31.2", features = ["user"] }
nuclerrors = { version = "0.1.0", path = "../nuclerrors" }
serde = "1.0.228"
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["strum_macros", "derive"] }
strum_macros = "0.28.0"
tabled = "0.20.0"
toml = "1.1.2"
tracing = "0.1.44"
walkdir = "2.5.0"
which = "8.0.2"
