[package]
name = "nuclctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
nix = "0.31.2"
nuclconsts = { version = "0.1.0", path = "../nuclconsts" }
nuclerrors = { version = "0.1.0", path = "../nuclerrors" }
nucllib = { version = "0.1.0", path = "../nucllib" }
serde = "1.0.228"
serde_json = "1.0.149"
tabled = "0.20.0"
