[package]
name = "nucld"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
libc = "0.2.182"
nix = { version = "0.31.2", features = ["user", "process", "signal"] }
nuclcommands = { version = "0.1.0", path = "../nuclcommands" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = "0.20.0"
thiserror = "2.0.18"
toml = "1.0.6"
walkdir = "2.5.0"
which = "8.0.2"
