[package]
name = "nucld"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"
libc = "0.2.182"
nix = { version = "0.31.2", features = ["user", "process", "signal", "reboot"] }
nuclconsts = { version = "0.1.0", path = "../nuclconsts" }
nuclerrors = { version = "0.1.0", path = "../nuclerrors" }
nucllib = { version = "0.1.0", path = "../nucllib" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tabled = "0.20.0"
thiserror = "2.0.18"
toml = "1.0.6"
tracing = "0.1.44"
walkdir = "2.5.0"
which = "8.0.2"
