[package]
name = "nucllib"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
nix = { version = "0.31.2", features = ["user"] }
nuclconsts = { version = "0.1.0", path = "../nuclconsts" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"
