[package]
name = "nuclstart"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
nuclconsts = { version = "0.1.0", path = "../nuclconsts" }
nucld = { version = "0.1.0", path = "../nucld" }
nucllib = { version = "0.1.0", path = "../nucllib" }
serde_json = "1.0.149"
